# py-basic-edu

./: .gitignore  README.md  pyproject.toml  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  plane.py
homework_03/: .dockerignore  Dockerfile  main.py  pyproject.toml
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: base.html  index.html
homework_06/: Dockerfile  app.py  docker-compose.yaml  requirements.txt
homework_06/app/: app.py  config.py
homework_06/app/migrations/versions/: 898affe2a9f5_test.py
homework_06/app/models/: products.py
homework_06/app/templates/: base.html  details.html  prestart.sh
homework_06/forms/: products.py
homework_06/migrations/versions/: 898affe2a9f5_test.py  b0562472666a_create_table.py
homework_06/models/: __init__.py  products.py
homework_06/templates/: about.html  create.html  show.html
