[tool.poetry]
name = "homeworks"
version = "0.1.0"
description = "otus hw"
authors = ["eugene <dlydz@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
fastapi = "0.85.2"
uvicorn = {version = "0.18.3", extras = ["standard"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
